Update checkstyle and fix style issues